[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

#[package.metadata.release]
#release = false

[dependencies]
futures-util = { version = "0.3.30", features = ["sink"] }
http = "1.1.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-websockets = { version = "0.8.0", features = ["client", "fastrand", "server", "sha1_smol"] }
structopt = { version = "0.3", default-features = false }